# devport

./: .gitignore  CLAUDE.md  MANUAL.md  PRD.md  README.md  index.html  package-lock.json  package.json
bundles/: manifest.json
installer/: build.ps1  devport.nsi
installer/config/: devport.json
installer/includes/: env.nsh  firewall.nsh  scheduler.nsh  uninstaller.nsh
installer/resources/: license.txt  welcome.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  installer-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: backup.rs  bundler.rs  config.rs  credentials.rs  database.rs  env.rs  env_profile.rs  health.rs  hosts.rs  installer.rs  inventory.rs  log.rs  mod.rs  open.rs  phpmyadmin.rs  port.rs  process.rs  project.rs  recovery.rs  scaffold.rs  scheduler.rs  service.rs  tray.rs  uninstaller.rs  updater.rs
src-tauri/src/models/: bundle.rs  inventory.rs  mod.rs  port_info.rs  process_info.rs  project.rs  service.rs
src-tauri/src/services/: bundle_installer.rs  bundler.rs  credential_manager.rs  database_manager.rs  download_manager.rs  env_manager.rs  health_checker.rs  hosts_manager.rs  inventory_scanner.rs  log_manager.rs  mariadb_diagnostics.rs  mod.rs  port_scanner.rs  process_manager.rs  project_detector.rs  project_watcher.rs  recovery.rs  scheduler.rs  service_manager.rs  storage.rs  uninstaller.rs  updater.rs  version_resolver.rs
src/components/: index.ts
src/components/apache/: ApachePortCard.tsx  ApachePortListItem.tsx  ApachePortModal.tsx  ApachePortsManager.tsx  index.ts
src/components/env/: ProfileManager.tsx  index.ts
src/constants/: frameworkOptions.ts  index.ts  projectTypeColors.ts  serviceNames.ts  timing.ts
src/hooks/: index.ts  useBuildElapsedTime.ts  useLogStream.ts  useProjectActions.ts  useServiceControl.ts  useTauriEvents.ts
src/services/: index.ts  tauriCommands.ts
src/stores/: activityLogStore.ts  apacheConfigStore.ts  index.ts  installerStore.ts  inventoryStore.ts  logStore.ts  portStore.ts  processStore.ts  projectStore.ts  serviceStore.ts  settingsStore.ts  uiStore.ts  updaterStore.ts
src/types/: apacheConfig.ts  bundle.ts  config.ts  env.ts  error.ts  index.ts  installer.ts  inventory.ts  port.ts  process.ts  project.ts  service.ts  settings.ts  uninstaller.ts  updater.ts
src/utils/: portDescriptions.ts  serviceColors.ts
(+45 files in other folders)
