[package]
name = "clickdevport"
version = "0.6.0"
description = "ClickDevPort - 통합 개발 환경 관리자"
authors = ["ClickDevPort"]
edition = "2021"

[lib]
name = "clickdevport_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "2"
image = "0.25"
notify = "6"
notify-debouncer-mini = "0.4"
zip = "2"
sha2 = "0.10"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi", "tlhelp32"] }
windows = { version = "0.58", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
